--- a/datenkapselung/Ausarbeitung.tex
+++ b/datenkapselung/Ausarbeitung.tex
@@ -2,7 +2,7 @@
 	
 	(siehe Ausarbeitung von N. M.)
 	
-	\subsection{Sichtbarkeit von Eigenschafen und Methoden}
+	\subsection{Sichtbarkeit von Eigenschaften und Methoden}
 	\input{datenkapselung/sichtbarkeit/zugriffsmodifikatoren.tex}
 	
 	\subsubsection{Sichtbarkeit 'öffentlich'}
