--- a/polymorphie/unterteilungen.tex
+++ b/polymorphie/unterteilungen.tex
@@ -1,6 +1,6 @@
 \begin{table}[h]
 	\begin{tabularx}{\textwidth}{$l|^X|^X}
-		\rowstyle{\bfseries}  & universell                              & Ad-hoc                             \\
+		\rowstyle{\bfseries}  & universell                              & ad-hoc                             \\
 		\rowstyle{\small}     & unendlich viele Typen                   & endliche Anzahl an Typen           \\
 		\rowstyle{\small}     & eine Implementierung                    & unterschiedliche Implementierungen \\
 		\hline
